--- a/workation_test.ipynb
+++ b/workation_test.ipynb
@@ -9,7 +9,7 @@
     "import os\n",
     "from langchain.document_loaders import PyPDFLoader\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"<your-openai-key>\""
    ]
   },
   {
